tests/baselines/reference/decoratorOnClassMethodParameter3.errors.txt
decoratorOnClassMethodParameter3.ts(5,23): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.


==== decoratorOnClassMethodParameter3.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/48509
    declare function dec(a: any): any;
    function fn(value: Promise<number>): any {
      class Class {
        async method(@dec(await value) arg: number) {}
                          ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
      }
      return Class
    }
    